# email-classifier

./: .gitignore  Readme.md
email-classifier/: pyproject.toml  requirements.txt
email-classifier-front/: package-lock.json  package.json
email-classifier-front/src/app/: layout.tsx  page.tsx
email-classifier-front/src/components/: EmailCard.tsx  Footer.tsx  Header.tsx  ResultList.tsx  StatusBar.tsx
email-classifier-front/src/types/: index.ts
email-classifier/src/: main.py
email-classifier/src/features/analysis/: controller.py  router.py  schemas.py  service.py
email-classifier/src/features/logger/: router.py  service.py
